<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="#FFCA28">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="300dp"
            android:layout_height="150dp"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/botonSumar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/botonSuma"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cantidadProducto"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/cantidadProducto"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/botonRestar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/botonResta"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombreProducto"
            android:id="@+id/nombre"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/precio"
            android:text="@string/precioProducto"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descripcion"
            android:text="@string/descripcionProducto"
            android:textColor="#a9a9a9"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>