<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".ActivityCompra">

<ImageView
    android:id="@+id/logoLaJusta"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="20dp"
    android:src="@mipmap/lajustalogopositivonegro">

</ImageView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70sp"
        android:text="@string/botonComprar"
        android:textSize="25sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:id="@+id/botonComprar" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70sp"
        android:text="@string/botonBuscarRecetas"
        android:textSize="25sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:id="@+id/botonRecetas" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70sp"
        android:text="@string/botonMasInformacion"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:id="@+id/botonMasInformacion" />


</LinearLayout>